# cognitive-services-speech-sdk-rs

./: Cargo.toml  build.rs
examples/translater/: continuous_translation_from_file.rs  helpers.rs  main.rs
src/: lib.rs  translation.rs
src/common/: property_id.rs
src/ffi/: bindings.rs
src/translation/: speech_translation_config.rs  translation_recognition_canceled_event.rs  translation_recognition_event.rs  translation_recognition_result.rs  translation_recognizer.rs  translation_synthesis_event.rs  translation_synthesis_result.rs
