[package]
name = "cognitive-services-speech-sdk-rs"
version = "1.3.0"
authors = ["Adam Bezecny <adam.bezecny@gmail.com>"]
edition = "2018"
description = "Rust bindings for Microsoft Speech SDK."
license = "MIT OR Apache-2.0"
keywords = ["speech", "microsoft", "cognitive", "recognition", "synthesizing"]
categories = ["multimedia", "multimedia::audio", "text-processing"]
exclude = ["examples/*"]
repository = "https://github.com/jabber-tools/cognitive-services-speech-sdk-rs/"
#documentation = "https://jabber-tools.github.io/cognitive_services_speech_sdk_rs/doc/1.0.0/cognitive_services_speech_sdk_rs/index.html"
documentation = "https://docs.rs/cognitive-services-speech-sdk-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
env_logger = "0.11"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
bindgen = "0.72"
zip = "6"

[dev-dependencies]
rodio = "0.21.1"
